Fixing visit tick hover on mobile

--- a/css/app.css
+++ b/css/app.css
@@ -171,7 +171,7 @@ body.landing {
 .sidebar.collapsed {
 	bottom: 16px;
 }
-.mobile.sidebar.collapsed {
+.mobile > .sidebar.collapsed {
 	top: 28px;
 }
 @media (min-width: 768px) {
@@ -179,7 +179,7 @@ body.landing {
 	.sidebar.collapsed, .sidebar {
 		bottom: 26px;
 	}
-	.mobile.sidebar.collapsed, .mobile.sidebar {
+	.mobile > .sidebar.collapsed, .mobile > .sidebar {
 		top: 38px;
 	}
 }
@@ -231,13 +231,13 @@ label.fancy-checkbox > input {
 }
 
 label.fancy-checkbox > input:checked + i {
-	color: #12B000;
+	color: #12B000; /*mid green*/
 }
-label.fancy-checkbox > input + i, label.fancy-checkbox > input:checked:hover + i {
-	color: #CECECE;
+label.fancy-checkbox > input + i {
+	color: #CECECE; /*light grey*/
 }
-label.fancy-checkbox > input:hover + i {
-	color: #18EE00;
+body:not(.mobile) label.fancy-checkbox > i:hover { /*touch devices tend to latch the hover on, which isn't what we want*/
+	color: #18EE00; /*light green*/
 }
 
 label.fancy-checkbox {
